--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,10 +3,9 @@
 
 name: Go
 
-on:
-  push:
-    tags:
-      - "v*"
+on: push
+    
+    
  
 
 jobs:
@@ -24,6 +23,8 @@ jobs:
     - name: Build
       run: go build -o syncdemo main.go
       
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Release
       uses: softprops/action-gh-release@v1
